--- a/Project.ipynb
+++ b/Project.ipynb
@@ -21,8 +21,7 @@
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
-    "from statsmodels.tsa.seasonal import STL\n",
-    "import seaborn as sns"
+    "from statsmodels.tsa.seasonal import STL\n"
    ]
   },
   {
